<resources>
    <string name="app_name">Examapp</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="challenge_your_knowledge_n_dive_into_fun_with_our_exam_app">Challenge Your Knowledge \n Dive into Fun with Our Exam App!</string>
    <string name="welcome_to_examelite">Welcome to ExamElite</string>
    <string name="start">Start</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="there_will_be_8_types_of_exams_n_when_you_are_prepared_n_please_press_the_ready_button_to_commence_the_eight_types_of_examinations">There will be 8 types of exams. \n When you are prepared, \n please press the READY button to commence the eight types of examinations.</string>
    <string name="ready">Ready</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="azerbaijani_icon_description">Azerbaijani icon description</string>
    <string name="exam_section">Exam Section</string>
    <string name="korean_icon_description">Korean icon description</string>
    <string name="korean">Korean</string>
    <string name="math_icon_description" />
    <string name="Math" />
    <string name="math">Math</string>
    <string name="biology_icon_description" />
    <string name="biology">Biology</string>
    <string name="russian_icon_description" />
    <string name="english_icon_description" />
    <string name="english">English</string>
    <string name="history">History</string>
    <string name="chemistry">Chemistry</string>
    <string name="history_icon_description" />
    <string name="chemistry_icon_description" />
    <string name="russian">Russian</string>
    <string name="azerbaijani_cardView">Azerbaijani</string>
    <string name="biology_cardView">Biology</string>
    <string name="azerbaijani_cardV">Azerbaijani</string>
    <string name="chemistry_cardView">Chemistry</string>
    <string name="english_cardView">English</string>
    <string name="history_cardView">History</string>
    <string name="korean_cardView">Korean</string>
    <string name="russian_cardView">Russian</string>
    <string name="math_cardView">Math</string>
    <string name="az_rbaycan_dili">Azərbaycan dili</string>
    <string name="btidai_m_kt_b">İbtidai məktəb</string>
    <string name="secondaryschool">secondarySchool</string>
    <string name="ali_m_kt_b">Ali məktəb</string>
    <string name="high_school_description">high_school_description</string>
    <string name="magistr">Magistr</string>
    <string name="master_degree_description" />
    <string name="elementary">elementary</string>
    <string name="secondarySchool" />
    <string name="listening">listening</string>
    <string name="reading">reading</string>
    <string name="writing">writing</string>
    <string name="speaking">speaking</string>
    <string name="profile_picture_icon">Profile Picture Icon</string>
    <string name="exam_app">Exam App</string>
    <string name="nargiz">Nargiz</string>
    <string name="education_icon">Education Icon</string>
    <string name="topik">Topik</string>
    <string name="listening_korean">listening_korean</string>
    <string name="reading_korean">reading korean</string>
    <string name="writing_korean">writing Korean</string>
    <string name="speaking_korean">speaking korean</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="abstract_icon_description">abstract icon description</string>
    <string name="signature">signature</string>
    <string name="algebra">algebra</string>
    <string name="geometry">geometry</string>
    <string name="combinators">combinators</string>
    <string name="trigonometry">trigonometry</string>
    <string name="arithmetic">arithmetic</string>
    <string name="grammar">grammar</string>
    <string name="reading_az">reading Az</string>
    <string name="ebook">eBook</string>
    <string name="botany">botany</string>
    <string name="zoology">zoology</string>
    <string name="physiology">physiology</string>
    <string name="splash_screen">splash screen</string>
    <string name="chemistry_edit_text">Chemistry</string>
    <string name="email_edit_text">Email</string>
    <string name="chemical_engineering">Chemical Engineering</string>
    <string name="physical_chemistry">Physical Chemistry</string>
    <string name="inorganic_chemistry">Inorganic Chemistry</string>
    <string name="azerbaijani_history">Azerbaijani History</string>
    <string name="general_world_history">General world history</string>
    <string name="identify_the_noun_in_the_following_sentences">Identify the noun in the following sentences:</string>
    <string name="i_live_in_amsterdam">I live in Amsterdam</string>
    <string name="question_1">Question 1.</string>
    <string name="i_live_in_amsterdam_">I live in Amsterdam.</string>
    <string name="answer">Answer</string>
    <string name="question_1_">Question 1</string>
    <string name="question_2_">Question 2</string>
    <string name="question_3_">Question 3</string>
    <string name="i_visited_the_eiffel_tower_in_paris">I visited the Eiffel Tower in Paris.</string>
    <string name="bhutan_is_a_beautiful_country">Bhutan is a beautiful country.</string>
    <string name="check">Check</string>
    <string name="question_no_1">Question No 1</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="q_1">Question 1</string>
    <string name="check_button">Check</string>
    <string name="i">I</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="live">Live</string>
    <string name="in">In</string>
    <string name="i_live_in_amsterdam_s1">I live in Amsterdam.</string>
    <string name="i_visited_the_eiffel_tower_in_paris_s2">I visited the Eiffel Tower in Paris.</string>
    <string name="eiffel_tower">Eiffel Tower</string>
    <string name="eiffel_tower_and_paris">Eiffel Tower and Paris</string>
    <string name="paris">Paris</string>
    <string name="the">The</string>
    <string name="question_2">Question 2</string>
    <string name="question1">question1</string>
    <string name="reading_eng_grammar">reading eng grammar</string>
    <string name="next">Next</string>
    <string name="the_inquiries_will_pertain_to_the_identification_of_nouns_within_the_given_sentences">The inquiries will pertain to the identification of nouns within the given sentences.</string>
    <string name="start_eng_grammar">Start</string>
    <string name="the_inquiries_will_pertain_to_the_n_identification_of_nouns_n_within_the_given_sentences">The inquiries will pertain to the \nIDENTIFICATION OF NOUNS\n within the given sentences.</string>
    <string name="warning">warning</string>
    <string name="back">Back</string>
    <string name="the_mailman_mr_joe_was_carrying_postcards">The mailman Mr. Joe was carrying postcards.</string>
    <string name="mailman_mr_joe_and_postcards">Mailman, Mr. Joe and postcards</string>
    <string name="postcards">Postcards</string>
    <string name="mr_joe">Mr.Joe</string>
    <string name="mailman">Mailman</string>
    <string name="question_3">Question 3</string>
    <string name="reading_cardviewText">Reading</string>
    <string name="reading_textCardView">Reading</string>
    <string name="analytical_chemistry">\n</string>
    <string name="analytical_Chemistry">Analytical Chemistry</string>
    <string name="identification_of_nouns">Identification of Nouns</string>
    <string name="general_english">General English</string>
    <string name="history_of_azerbaijan">History of Azerbaijan</string>
    <string name="history_of_the_world">History of the world</string>
    <string name="listening_Korean">Listening</string>
    <string name="reading_Korean">Reading</string>
    <string name="writing_Korean">Writing</string>
    <string name="speaking_Korean">Speaking</string>
    <string name="test_of_proficiency_in_korean">Test of Proficiency in Korean</string>
</resources>