<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:textColor="@color/colorPrimaryText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/sign_up_text" />

    <TextView
        android:textColor="@color/colorPrimaryText"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/please_sign_up_to_continue" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:background="@drawable/edit_text_background"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ems="10"
        android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etUsername"
            android:background="@drawable/edit_text_background"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:textStyle="bold"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textVisiblePassword" />

        <EditText
        android:id="@+id/etTextPassword"
        android:background="@drawable/edit_text_background"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:background="@drawable/edit_text_background"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/signUpButton"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryButton" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/wave"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/abstract_icon_description" />
</androidx.constraintlayout.widget.ConstraintLayout>