<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cardView.HistoryCardView">

    <GridLayout
        android:id="@+id/gridLayout8"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="15dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/historyAz"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/history1"
            app:cardCornerRadius="40dp"
            app:cardElevation="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/azerbaijaniHistoryIcon"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/azerbaijani_history"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/azerbaijani_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/history_of_azerbaijan"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryButton"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/historyWorld"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/history2"
            app:cardCornerRadius="40dp"
            app:cardElevation="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/generalWorldHistoryIcon"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/general_world_history"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/general_world_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/history_of_the_world"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryButton"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>